--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "devDependencies": {
     "concurrently": "5.1.0",
-    "css-minimizer-webpack-plugin": "^1.1.5"
+    "css-minimizer-webpack-plugin": "^1.1.5",
+    "webpack-bundle-analyzer": "^3.9.0"
   },
   "homepage": "/",
   "dependencies": {
@@ -49,6 +50,7 @@
     "jest-watch-typeahead": "0.4.2",
     "jss-rtl": "0.3.0",
     "leaflet": "1.6.0",
+    "lodash": "^4.17.20",
     "mini-css-extract-plugin": "0.9.0",
     "moment": "2.24.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
