--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jss-rtl": "0.3.0",
     "leaflet": "1.6.0",
     "lodash": "^4.17.20",
+    "lodash.debounce": "^4.0.8",
     "mini-css-extract-plugin": "0.9.0",
     "moment": "2.24.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
