--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "@welldone-software/why-did-you-render": "^6.2.1",
     "concurrently": "5.1.0",
     "css-minimizer-webpack-plugin": "^1.1.5",
     "webpack-bundle-analyzer": "^3.9.0"
